[project]
name = "claude-statusline"
version = "0.1.0"
description = "Claude Code status line script"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
